K8S/minio/ingress-istio.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  namespace: "testing"
  name: "minio-console"
spec:
  ingressClassName: "istio"
  tls:
    - secretName: "minio-ingress-cert"
      hosts: ["minio.k3s"]
  rules:
    - host: "minio.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "minio"
                port:
                  number: 9001
